# rinha-clinic

./: .env.example  .gitignore  Dockerfile  fly.toml  landing.html  pyproject.toml  render.yaml  start.sh  test_pipeline.py
prompts/: receptionist.md
src/rinha/: config.py  main.py  orchestrator.py
src/rinha/ai/: llm.py  stt.py  tts.py
src/rinha/phone/: audio.py  twilio_handler.py
