[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "rinha"
version = "0.1.0"
description = "AI voice receptionist for Indian clinics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14",
    "python-dotenv>=1.2",
    "httpx>=0.28",
    "pydantic>=2.13",
    "groq>=0.23",
    "numpy>=2.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
rinha = "rinha.main:cli"
